Refactor: fixes for MyDataRestConfig